--- a/.github/workflows/eshoponweb-cicd.yml
+++ b/.github/workflows/eshoponweb-cicd.yml
@@ -1,15 +1,15 @@
 name: eShopOnWeb Build and Test
 
 #Triggers (uncomment line below to use it)
-#on: [push, workflow_dispatch]
+on: workflow_dispatch
 
 #Environment variables https://docs.github.com/en/actions/learn-github-actions/environment-variables
 env:
-  RESOURCE-GROUP: rg-eshoponweb-NAME
-  LOCATION: westeurope
+  RESOURCE-GROUP: rg-eshoponweb-indonesiacentral
+  LOCATION: indonesiacentral
   TEMPLATE-FILE: infra/webapp.bicep
   SUBSCRIPTION-ID: 7793d0a5-75cf-4976-bc63-551ba5c3666f
-  WEBAPP-NAME: eshoponweb-webapp-NAME
+  WEBAPP-NAME: devops-webapp-indonesiacentral-2623513167
 
 jobs:
   #Build, test and publish .net web project in repository
